MainActivity: implement a list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#FFC107</color>
+    <color name="gray">#9E9E9E</color>
+    <color name="gray_200">#EEEEEE</color>
+    <color name="black">#000000</color>
 </resources>
